<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="175px"
    android:layout_height="250px"
    android:padding="5dip">
<TableRow>
<TextView
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:text="@string/comp_pts_info"
    android:layout_weight="5"
    android:padding="10dip"
    />
</TableRow>

<TableRow>
<TextView
    android:text="@string/comp_pts_kcal"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="4"
    />
<EditText
    android:id="@+id/comp_pts_kcal"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    />
</TableRow>

<TableRow>
<TextView
    android:text="@string/comp_pts_fat"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="4"
    />
<EditText
    android:id="@+id/comp_pts_fat"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    />
</TableRow>

<TableRow>
<TextView
    android:text="@string/comp_pts_fiber"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="4"
    />
<EditText
    android:id="@+id/comp_pts_fiber"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    />
</TableRow>

<TableRow android:gravity="center">
<Button
    android:id="@+id/compute_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/comp_pts_compute_button"
    />
</TableRow>
</TableLayout>
