<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TableRow android:layout_weight="4" android:gravity="center">
<ImageView
    android:src="@drawable/fruits"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    />
</TableRow>

<RadioGroup
    android:id="@+id/food_radiogroup"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:checkedButton="@+id/calories_radio"
    >
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<View
    android:visibility="invisible"
    android:layout_width="0px"
    android:layout_height="0px"
    android:layout_weight="1"
    />
<RadioButton
    android:id="@+id/calories_radio"
    android:text="@string/calories_label"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="4"
    />
<EditText
    android:id="@+id/calories"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    />
<View
    android:visibility="invisible"
    android:layout_width="0px"
    android:layout_height="0px"
    android:layout_weight="1"
    />
</LinearLayout>

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<View
    android:visibility="invisible"
    android:layout_width="0px"
    android:layout_height="0px"
    android:layout_weight="1"
    />
<RadioButton
    android:id="@+id/points_radio"
    android:text="@string/points_label"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="4"
    />
<EditText
    android:id="@+id/points"
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    />
<View
    android:visibility="invisible"
    android:layout_width="0px"
    android:layout_height="0px"
    android:layout_weight="1"
    />
</LinearLayout>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
<View
    android:visibility="invisible"
    android:layout_width="0px"
    android:layout_height="0px"
    android:layout_weight="5"
    />
<Button
    android:id="@+id/compute_points_button"
    android:text="@string/compute_points_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="5pt"
    android:enabled="false"
    />
<View
    android:visibility="invisible"
    android:layout_width="0px"
    android:layout_height="0px"
    android:layout_weight="1"
    />
</LinearLayout>
</RadioGroup>

<TableRow android:gravity="center">
<View
    android:visibility="invisible"
    android:layout_width="0px"
    android:layout_height="0px"
    android:layout_weight="1"
    />
<Button
    android:id="@+id/save_button"
    android:layout_width="0px"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:text="@string/save_btn_label"
    />
<Button
    android:id="@+id/cancel_button"
    android:layout_width="0px"
    android:layout_weight="1"
    android:layout_height="wrap_content"
    android:text="@string/cancel_btn_label"
    />
<View
    android:visibility="invisible"
    android:layout_width="0px"
    android:layout_height="0px"
    android:layout_weight="1"
    />
</TableRow>

<View
    android:visibility="invisible"
    android:layout_width="10dip"
    android:layout_height="0px"
    android:layout_weight="2"
    />

<TableRow>
<TextView
    android:layout_width="0px"
    android:layout_height="wrap_content"
    android:text="@string/food_info"
    android:layout_weight="5"
    android:padding="10dip"
    />
</TableRow>
</TableLayout>
